# deep_learning_labs

./: .gitignore  README.md  lab4.rar  pyproject.toml
data/text_corpus/: file_1.txt  file_10.txt  file_2.txt  file_3.txt  file_4.txt  file_5.txt  file_6.txt  file_7.txt  file_8.txt  file_9.txt
lab1/: lab1.1_basics.ipynb  lab1.2_handling_data.ipynb  x_tensor.pt
lab2/: lab2_regression.ipynb  model_linear_regression.pt  model_non_linear_regression.pt
lab3/: lab3_mlp_classif.ipynb  model_mlp_classif.pt  model_mlp_classif_trained.pt  model_relu_mlp_classif_trained.pt
lab4/: lab4.1_overfitting.ipynb  lab4.2_mlp_autoencoder.ipynb
lab5/: lab5.1_cnn_basics.ipynb  lab5.2_cnn_classif.ipynb  lab5.3_bonus.ipynb
lab6/: lab6.1_introspection.ipynb  lab6.2_cnn_autoencoders.ipynb  model_cnn_classif_introspection.pt  pretraining_cnn.ipynb
setup/: instructions_linux_conda.txt  requirements_SC.txt  setup_Visual_studio_code.txt  test_SC.ipynb
