[project]
name = "tp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
